# reconstruction

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
doc/1_viikkoraportti/: 1_viikkoraportti.aux  1_viikkoraportti.tex  1_viikkoraportti.tex.bak
doc/2_viikkoraportti/: 2_viikkoraportti.tex  2_viikkoraportti.tex.bak
doc/3_viikkoraportti/: 3_viikkoraportti.tex  3_viikkoraportti.tex.bak
doc/4_viikkoraportti/: 4_viikkoraportti.tex.bak
doc/doxygen/html/: algorithms_8hpp_source.html  annotated.html  classes.html  classsimrec_1_1ComplexArray-members.html  classsimrec_1_1Image.html  (+15 more)
doc/kayttoohje/: kayttoohje.aux  kayttoohje.out  kayttoohje.tex
doc/maarittely/: maarittely_dokumentti.aux  maarittely_dokumentti.tex.bak  maarittelydokumentti.dvi  maarittelydokumentti.tex.bak
doc/testaus/: testausdokumentti.aux  testausdokumentti.out  testausdokumentti.tex
doc/toteutus/: toteutusdokumentti.aux  toteutusdokumentti.out  toteutusdokumentti.tex.bak
misc/: chess.raw  joku_242_257_8bit.raw  nelio_181_143_8bit.raw  nelio_333_229_8bit.raw  nelio_425_342_8bit.raw  neliot_223_158_8bit.raw  phantom_180_128_8bit.raw  pisteita_720_439_8bit.raw  shepplogan_180_728_8bit.raw  shepploganbig_333_813_8bit.raw  sinogram_241x964_8bit.raw  toinenjoku_785_500_8bit.raw  ympyra_392_245_8bit.raw
simrec/: .image.cpp.swp  .image.hpp.swp  CMakeLists.txt  algorithms.cpp  algorithms.hpp  complex_array.cpp  complex_array.hpp  image.cpp  image.hpp  main.cpp  utils.cpp  utils.hpp
tests/: .image.cpp.swp  CMakeLists.txt  algorithms.cpp  complex_array.cpp  image.cpp  sample.cpp  test.cpp  utils.cpp
(+27 files in other folders)
